--- a/frontend/src/components/ProjectCard/projectcard.module.scss
+++ b/frontend/src/components/ProjectCard/projectcard.module.scss
@@ -1,3 +1,5 @@
+@import "../../css/settings/global";
+
 .project-card {
   background-color: #F4F4F4;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15); 
