--- a/frontend/src/css/main.scss
+++ b/frontend/src/css/main.scss
@@ -4,7 +4,7 @@
 
 // COMPONENETS
 @import "./components/button";
-@import "./components/project-card";
+//@import "./components/project-card";
 @import "./components/input";
 @import "./components/notification";
 @import "./components/comment-input";
